<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/color_F8F8F8"
                android:orientation="vertical">

    <RelativeLayout
            android:id="@+id/rel1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/m64"
            android:background="@drawable/daohanglan">

        <ImageView
                android:id="@+id/back_btn"
                android:layout_width="28dp"
                android:layout_height="@dimen/m18"
                android:layout_alignParentLeft="true"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="@dimen/m20"
                android:layout_marginBottom="@dimen/m15"
                android:src="@drawable/icon_back"/>

        <TextView
                android:id="@+id/title_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/m10"
                android:text="@string/tv222"
                android:textColor="@color/top_heiziti"
                android:textSize="@dimen/sp20"
                android:textStyle="bold"/>


    </RelativeLayout>

    <TextView
            android:id="@+id/tv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rel1"
            android:layout_marginLeft="@dimen/m20"
            android:layout_marginTop="@dimen/m10"
            android:text="@string/tv109"
            android:textColor="@color/top_heiziti"
            android:textSize="@dimen/sp18"
            android:textStyle="bold"/>

    <LinearLayout
            android:id="@+id/lin1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/m141"
            android:layout_below="@+id/tv1"
            android:layout_marginTop="@dimen/m10"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:orientation="vertical">

        <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content"
                >

            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/m20">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/tv110"
                        android:textColor="@color/top_heiziti"
                        android:textSize="@dimen/sp15"/>


                <CheckBox
                        android:id="@+id/cb_product_suggest"
                        android:layout_width="@dimen/m25"
                        android:layout_height="@dimen/m25"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="@dimen/m20"
                        android:layout_alignParentRight="true"
                        android:background="@drawable/btn_checkbox"
                        android:button="@null"
                        android:checked="false"/>
            </RelativeLayout>

            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/m20"
                    android:layout_marginTop="@dimen/m20">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/tv111"
                        android:textColor="@color/top_heiziti"
                        android:textSize="@dimen/sp15"/>

                <CheckBox
                        android:id="@+id/cb_fault_feedback"
                        android:layout_width="@dimen/m25"
                        android:layout_alignParentRight="true"
                        android:layout_height="@dimen/m25"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="@dimen/m20"
                        android:background="@drawable/btn_checkbox"
                        android:button="@null"
                        android:checked="false"/>
            </RelativeLayout>

            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/m20"
                    android:layout_marginTop="@dimen/m20">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/tv112"
                        android:textColor="@color/top_heiziti"
                        android:textSize="@dimen/sp15"/>

                <CheckBox
                        android:id="@+id/cb_other"
                        android:layout_width="@dimen/m25"
                        android:layout_height="@dimen/m25"
                        android:layout_centerVertical="true"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="@dimen/m20"
                        android:background="@drawable/btn_checkbox"
                        android:button="@null"
                        android:checked="false"/>
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
            android:layout_below="@+id/lin1"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:background="@color/white"
            android:layout_marginTop="@dimen/m10"
            android:layout_height="@dimen/m170">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/m20"
                android:layout_marginTop="@dimen/m10"
                android:text="@string/tv113"
                android:textColor="@color/color_7E7E7E"
                android:textSize="@dimen/sp13"/>

        <EditText
                android:id="@+id/edit_content"
                android:layout_width="match_parent"
                android:layout_height="@dimen/m106"
                android:layout_marginLeft="@dimen/m20"
                android:layout_marginTop="@dimen/m10"
                android:layout_marginRight="@dimen/m20"
                android:background="@drawable/layout_bg2"
                android:gravity="left|top"
                android:hint="@string/edit_hint30"
                android:maxLength="140"
                android:paddingLeft="@dimen/m10"
                android:paddingTop="@dimen/m5"
                android:textColor="@color/top_heiziti"
                android:textColorHint="@color/color_bbbbbb"
                android:textSize="@dimen/sp13"/>
    </LinearLayout>

    <LinearLayout
            android:id="@+id/add_class_teacher_btn"
            android:layout_width="@dimen/m209"
            android:layout_height="@dimen/m50"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/m80"
            android:background="@drawable/login_btn"
            android:gravity="center">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/tv39"
                android:textColor="@color/white"
                android:textSize="@dimen/sp20"
                android:textStyle="normal"/>

    </LinearLayout>
</RelativeLayout>