<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".activity.CheckCodeActivity">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/m64"
            android:background="@drawable/daohanglan">

        <ImageView
                android:id="@+id/back_btn"
                android:layout_width="28dp"
                android:layout_height="@dimen/m18"
                android:layout_alignParentLeft="true"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="@dimen/m20"
                android:layout_marginBottom="@dimen/m15"
                android:src="@drawable/icon_back"/>

        <TextView
                android:id="@+id/title_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/m10"
                android:text="@string/tv144"
                android:textColor="@color/top_heiziti"
                android:textSize="@dimen/sp20"
                android:textStyle="bold"/>
    </RelativeLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:background="@drawable/check_bg"
            android:orientation="vertical"
            android:layout_height="match_parent">

        <com.noplugins.keepfit.userplatform.util.ui.StepView
                android:id="@+id/sv"
                android:paddingTop="27dp"
                android:layout_marginLeft="@dimen/m20"
                android:layout_marginRight="@dimen/m20"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="@dimen/m50"/>

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/m10"
                android:layout_marginLeft="@dimen/m30"
                android:layout_marginRight="@dimen/m30"
                android:background="@drawable/code_bg"
                android:layout_height="@dimen/m200">

            <ImageView
                    android:id="@+id/erweima_code"
                    android:layout_width="@dimen/m120"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true"
                    android:layout_height="@dimen/m120"/>

            <LinearLayout
                    android:layout_width="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:layout_marginRight="@dimen/m15"
                    android:layout_marginTop="@dimen/m15"
                    android:layout_alignParentRight="true"
                    android:layout_height="wrap_content">

                <ImageView
                        android:layout_width="@dimen/m57"
                        android:src="@drawable/order_number"
                        android:layout_height="@dimen/m14"/>

                <TextView
                        android:id="@+id/order_number"
                        android:layout_marginLeft="@dimen/m10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="2132133131"
                        android:textColor="@color/color_000000"
                        android:textSize="@dimen/sp10"
                        android:textStyle="bold"
                />
            </LinearLayout>

            <LinearLayout
                    android:layout_width="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center_horizontal"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginLeft="@dimen/m15"
                    android:layout_marginBottom="@dimen/m15"
                    android:layout_height="wrap_content">

                <ImageView
                        android:layout_width="@dimen/m47"
                        android:src="@drawable/icon_card"
                        android:layout_height="@dimen/m30"/>

                <TextView
                        android:layout_marginTop="@dimen/m3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tv137"
                        android:textColor="@color/white"
                        android:textSize="8sp"
                />
            </LinearLayout>

        </RelativeLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:background="@drawable/xuxian_bg"
                android:layout_marginLeft="@dimen/m42"
                android:layout_marginTop="@dimen/m9"
                android:layout_marginRight="@dimen/m42"
                android:layout_height="wrap_content"/>

        <RelativeLayout
                android:id="@+id/lin1"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_marginLeft="@dimen/m45"
                android:layout_marginTop="@dimen/m29"
                android:layout_height="wrap_content">
            <LinearLayout
                    android:layout_width="wrap_content"
                    android:orientation="vertical"
                    android:layout_height="wrap_content">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tv145"
                        android:textColor="@color/color_4A4A4A"
                        android:textSize="@dimen/sp15"
                />
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tv146"
                        android:textColor="@color/color_6D7278"
                        android:textSize="@dimen/sp10"
                />
            </LinearLayout>
            <TextView
                    android:id="@+id/xiangmu_name"
                    android:layout_marginLeft="@dimen/m80"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="增肌塑形·体能提升"
                    android:textColor="@color/color_6D7278"
                    android:textSize="@dimen/sp15"
            />
        </RelativeLayout>
        <RelativeLayout
                android:id="@+id/lin2"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/m20"
                android:layout_marginLeft="@dimen/m45"
                android:layout_height="wrap_content">
            <LinearLayout
                    android:layout_width="wrap_content"
                    android:orientation="vertical"
                    android:layout_height="wrap_content">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tv147"
                        android:textColor="@color/color_4A4A4A"
                        android:textSize="@dimen/sp15"
                />
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tv148"
                        android:textColor="@color/color_6D7278"
                        android:textSize="@dimen/sp10"
                />
            </LinearLayout>
            <TextView
                    android:id="@+id/teacher_name"
                    android:layout_marginLeft="@dimen/m80"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="廖胜云"
                    android:textColor="@color/color_6D7278"
                    android:textSize="@dimen/sp15"
            />
        </RelativeLayout>
        <RelativeLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/m20"
                android:layout_marginLeft="@dimen/m45"
                android:layout_height="wrap_content">
            <LinearLayout
                    android:layout_width="wrap_content"
                    android:orientation="vertical"
                    android:layout_height="wrap_content">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tv149"
                        android:textColor="@color/color_4A4A4A"
                        android:textSize="@dimen/sp15"
                />
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tv150"
                        android:textColor="@color/color_6D7278"
                        android:textSize="@dimen/sp10"
                />
            </LinearLayout>
            <TextView
                    android:id="@+id/time_tv"
                    android:layout_marginLeft="@dimen/m80"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="2019-07-15 20：30-21：00"
                    android:textColor="@color/color_6D7278"
                    android:textSize="@dimen/sp15"
            />
        </RelativeLayout>
        <RelativeLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/m20"
                android:layout_marginLeft="@dimen/m45"
                android:layout_height="wrap_content">
            <LinearLayout
                    android:layout_width="wrap_content"
                    android:orientation="vertical"
                    android:layout_height="wrap_content">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tv151"
                        android:textColor="@color/color_4A4A4A"
                        android:textSize="@dimen/sp15"
                />
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tv152"
                        android:textColor="@color/color_6D7278"
                        android:textSize="@dimen/sp10"
                />
            </LinearLayout>

            <TextView
                    android:id="@+id/address_tv"
                    android:layout_marginLeft="@dimen/m80"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="傻场馆"
                    android:textColor="@color/color_6D7278"
                    android:textSize="@dimen/sp15"
                    />
        </RelativeLayout>

        <RelativeLayout
                android:id="@+id/rl_room"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/m20"
                android:layout_marginLeft="@dimen/m45"
                android:layout_height="wrap_content">
            <LinearLayout
                    android:layout_width="wrap_content"
                    android:orientation="vertical"
                    android:layout_height="wrap_content">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_room"
                        android:textColor="@color/color_4A4A4A"
                        android:textSize="@dimen/sp15"
                        />
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_room_en"
                        android:textColor="@color/color_6D7278"
                        android:textSize="@dimen/sp10"
                        />
            </LinearLayout>
            <TextView
                    android:id="@+id/room_tv"
                    android:layout_marginLeft="@dimen/m80"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="傻场馆"
                    android:textColor="@color/color_6D7278"
                    android:textSize="@dimen/sp15"
                    />
        </RelativeLayout>

    </LinearLayout>
</LinearLayout>